2004-09-29    <tino@firebird.03.softkill.net>

	* Makefile.proto (tar): added

2004-09-04    <tino@firebird.03.softkill.net>

	* Makefile.awk, Makefile.tino.dist, Makefile.proto: changes for
	better override support.

	* Makefile-tino.sh, Makefile.awk, Makefile.proto,
	Makefile.d.proto: automatic creation of dependencies added (new
	#include(...) method Makefile.d.proto).

2004-08-25    <tino@firebird.03.softkill.net>

	* Makefile.awk, Makefile-tino.sh: Lines which contain @MD5TINOIGN@
	will be escaped from MD5 sum safety check.  This is needed to be
	able to add date information in generated files (which always
	changes if re-generated).  Needs the new version of md5copy (which
	only compares by MD5 sum) in Makefile-tino.sh

	* Makefile.proto: Usage clarified, new distfiles noted.

	* Makefile.tino.dist, .cvsignore.dist: added

2004-08-22  U-KOSH\Administrator  <Administrator@KOSH>

	* Makefile, Makefile-tino.sh, Makefile.awk, Makefile.proto: New
	variable TINOCOPY (to copy files from elsewhere) and slight
	improvements of auto-dependencies.

2004-08-18  U-KOSH\Administrator  <Administrator@KOSH>

	* file.h: AIO routines moved in file_aio.h, this is not present in
	CygWin.

	* file_aio.h: added in favor of file.h

	* strwild.h (tino_strwild): BUGfix in case no allquantor was used.

2004-08-17  U-KOSH\Administrator  <Administrator@KOSH>

	* buf.h (tino_buf_get_c): added
	(TINO_BUF_ADD_C): oops, bug found.  Did I ever use this?
	(TINO_BUF_PREPEND_C, tino_buf_prepend, tino_buf_prepend_c,
	tino_buf_prepend_ptr, tino_buf_prepend_n, tino_buf_prepend_s):
	added

	* helpers.h (tino_read_step, tino_read, tino_write_step,
	tino_write): added

2004-08-16  U-KOSH\Administrator  <Administrator@KOSH>

	* buf.h (tino_buf_write): Old implementation of tino_buf_write was
	bullshit.
	(tino_buf_write_ok): added as replacement for tino_buf_write()
	(tino_buf_write_all): added
	(tino_buf_read_all): added, with optimizations

2004-08-15  U-KOSH\Administrator  <Administrator@KOSH>
