@@ -64,7 +64,10 @@
 # That's why it is as it is.
 #
 # $Log$
-# Revision 1.14  2004-09-28 22:27:39  tino
+# Revision 1.15  2004-09-29 00:00:47  tino
+# make install and make dist, see Changelog
+#
+# Revision 1.14  2004/09/28 22:27:39  tino
 # added "make tar" in Makefile.proto
 #
 # Revision 1.13  2004/09/04 22:42:32  tino
@@ -174,10 +177,11 @@ Makefile.md5::
 $(VERSIONFILE):	VERSION Makefile
 	$(AWK) -vPROG="$(PROG)" '{ print "#define " toupper(PROG) "_VERSION \"" $$0 "\"" }' VERSION > $(VERSIONFILE)
 
+#C# Poor man's install
 install:
-	for a in $(PROGS); do $(RM) "$$HOME/bin/$$a"; \
-	$(CP) "$$a" "$$HOME/bin/$$a"; $(STRIP) "$$HOME/bin/$$a"; done
-
+	IPATH="$(INSTALLPATH)"; [ -n "$$IPATH" ] || IPATH="$$HOME"; \
+	for a in $(PROGS); do $(RM) "$$IPATH/bin/$$a"; \
+	$(CP) "$$a" "$$IPATH/bin/$$a"; $(STRIP) "$$IPATH/bin/$$a"; done
 
 ########################################################################
 #C
@@ -207,7 +211,7 @@ distclean:	clean
 #C# (subdirectory tino)
 
 dist:	distclean
-	$(MAKE) -C tino dist HERE="$(HERE)"
+	$(MAKE) -C tino dist HERE="$(HERE)" DEBUGS="$(DBG_CFLAGS)$(DBG_LDFLAGS)$(DBG_LDLIBS)"
 
 tar:	distclean
 	$(MAKE) -C tino tar HERE="$(HERE)"
