@@ -6,7 +6,10 @@
 # Not copyrighted as this is just a stub.
 #
 # $Log$
-# Revision 1.3  2004-09-04 14:25:20  tino
+# Revision 1.4  2004-09-29 00:00:47  tino
+# make install and make dist, see Changelog
+#
+# Revision 1.3  2004/09/04 14:25:20  tino
 # typos corrected
 #
 # Revision 1.2  2004/09/04 14:12:15  tino
@@ -27,6 +30,7 @@ ADD_LDFLAGS=
    TINOCOPY=
 #    TINOINC=tino_common.h
 #    TINOLIB=tino/lib.h
+#INSTALLPATH=/usr/local
 # DBG_CFLAGS=
 #DBG_LDFLAGS=
 # DBG_LDLIBS=-lefence
